# Projet5-ML-deployement-Futurisys

./: Hadziavdic_Amela_1_notebook_2025_08_15.html  README.md  main.py  model_xgb.pkl  pyproject.toml  requirements.txt  test_model.py
.github/workflows/: ci_cd.yml  test_model.py  test_model.yml
src/: streamlit_app.py
tests/: test_model.py
