[tool.poetry]
name = "p5-project"
version = "0.1.0"
description = ""
authors = ["masala-hadziavdic <amela188@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.13"
shap = "^0.46.0"
fastapi = ">=0.119.0,<0.120.0"
uvicorn = ">=0.38.0,<0.39.0"
jupyter = ">=1.1.1,<2.0.0"
ipywidgets = ">=8.1.7,<9.0.0"
xgboost = ">=3.1.0,<4.0.0"
pandas = ">=2.3.3,<3.0.0"
seaborn = ">=0.13.2,<0.14.0"
ipykernel = "^7.0.1"
scikit-learn = "^1.7.2"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

